<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />

        <EditText
                android:id="@+id/favoriteGenreEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/favorite_genre"
                android:inputType="text" />

        <EditText
                android:id="@+id/favoriteGameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/favorite_game"
                android:inputType="text" />

        <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="numberDecimal" />

        <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

    </LinearLayout>
</ScrollView>